# sprinter

./: CMakeLists.txt  README.md  dialog.cpp  dialog.h  dialog.ui  itemmodel.cpp  itemmodel.h  listwidget.cpp  listwidget.h  main.cpp  resources.qrc  sprinter.css  sprinter.pro  stdinthread.cpp  stdinthread.h
examples/: edit.sh  run.sh
resources/: resources.qrc
src/: dialog.cpp  dialog.h  itemmodel.cpp  itemmodel.h  main.cpp
ui/: dialog.ui
